CSharp/HOPLGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from HOPLGrammar.g4 by ANTLR 4.6.1-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace HOPLGrammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.1-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class HOPLGrammarParser : Parser {
	public const int
		NAMESPACE_KW=1, IMPORT_KW=2, ALIAS_KW=3, REQUIRED_KW=4, CONSTANT_KW=5, 
		RETURN_KW=6, AWAIT_KW=7, TRIGGER_KW=8, HANDLER_KW=9, LIST_KW=10, TUPLE_KW=11, 
		IF_KW=12, ELSE_KW=13, FOR_KW=14, FOREACH_KW=15, IN_KW=16, WHILE_KW=17, 
		NOT_KW=18, AND_KW=19, OR_KW=20, BOX_OPEN=21, BOX_CLOSE=22, CURLY_OPEN=23, 
		CURLY_CLOSE=24, PARAN_OPEN=25, PARAN_CLOSE=26, INTEGER=27, FLOAT=28, BOOLEAN=29, 
		STRING=30, INTEGER_VAL=31, FLOAT_VAL=32, BOOLEAN_VAL=33, STRING_VAL=34, 
		DOT=35, COMMA=36, ASSIGN=37, MULT=38, DIV=39, PLUS=40, MINUS=41, EQ=42, 
		NEQ=43, LESS=44, LEQ=45, GRT=46, GEQ=47, CONCAT=48, UIGNORE=49, SL_COMMENT=50, 
		ML_COMMENT=51, ID=52, WS=53, TERM=54, ERR=55;
	public const int
		RULE_compileUnit = 0, RULE_namespaceDec = 1, RULE_namespaceBody = 2, RULE_namespacePart = 3, 
		RULE_namespace = 4, RULE_importNamespace = 5, RULE_identifier = 6, RULE_args = 7, 
		RULE_body = 8, RULE_functionDec = 9, RULE_handlerDec = 10, RULE_call = 11, 
		RULE_stat = 12, RULE_expr = 13, RULE_await = 14, RULE_if = 15, RULE_elseIf = 16, 
		RULE_else = 17, RULE_while = 18, RULE_for = 19, RULE_foreach = 20, RULE_arg = 21, 
		RULE_varDec = 22, RULE_globalDec = 23, RULE_assign = 24, RULE_unpack = 25, 
		RULE_unpacked = 26, RULE_return = 27, RULE_typeName = 28, RULE_typeVal = 29;
	public static readonly string[] ruleNames = {
		"compileUnit", "namespaceDec", "namespaceBody", "namespacePart", "namespace", 
		"importNamespace", "identifier", "args", "body", "functionDec", "handlerDec", 
		"call", "stat", "expr", "await", "if", "elseIf", "else", "while", "for", 
		"foreach", "arg", "varDec", "globalDec", "assign", "unpack", "unpacked", 
		"return", "typeName", "typeVal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'import'", "'as'", "'required'", "'const'", "'return'", 
		"'await'", "'trigger'", "'handle'", "'list'", "'tuple'", "'if'", "'else'", 
		"'for'", "'foreach'", "'in'", "'while'", "'not'", "'and'", "'or'", "'['", 
		"']'", "'{'", "'}'", "'('", "')'", "'int'", "'float'", "'bool'", "'string'", 
		null, null, null, null, "'.'", "','", "'='", "'*'", "'/'", "'+'", "'-'", 
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "'_'", null, null, 
		null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NAMESPACE_KW", "IMPORT_KW", "ALIAS_KW", "REQUIRED_KW", "CONSTANT_KW", 
		"RETURN_KW", "AWAIT_KW", "TRIGGER_KW", "HANDLER_KW", "LIST_KW", "TUPLE_KW", 
		"IF_KW", "ELSE_KW", "FOR_KW", "FOREACH_KW", "IN_KW", "WHILE_KW", "NOT_KW", 
		"AND_KW", "OR_KW", "BOX_OPEN", "BOX_CLOSE", "CURLY_OPEN", "CURLY_CLOSE", 
		"PARAN_OPEN", "PARAN_CLOSE", "INTEGER", "FLOAT", "BOOLEAN", "STRING", 
		"INTEGER_VAL", "FLOAT_VAL", "BOOLEAN_VAL", "STRING_VAL", "DOT", "COMMA", 
		"ASSIGN", "MULT", "DIV", "PLUS", "MINUS", "EQ", "NEQ", "LESS", "LEQ", 
		"GRT", "GEQ", "CONCAT", "UIGNORE", "SL_COMMENT", "ML_COMMENT", "ID", "WS", 
		"TERM", "ERR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HOPLGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public HOPLGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(HOPLGrammarParser.Eof, 0); }
		public ImportNamespaceContext[] importNamespace() {
			return GetRuleContexts<ImportNamespaceContext>();
		}
		public ImportNamespaceContext importNamespace(int i) {
			return GetRuleContext<ImportNamespaceContext>(i);
		}
		public ITerminalNode[] TERM() { return GetTokens(HOPLGrammarParser.TERM); }
		public ITerminalNode TERM(int i) {
			return GetToken(HOPLGrammarParser.TERM, i);
		}
		public NamespaceDecContext[] namespaceDec() {
			return GetRuleContexts<NamespaceDecContext>();
		}
		public NamespaceDecContext namespaceDec(int i) {
			return GetRuleContext<NamespaceDecContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IMPORT_KW) {
				{
				{
				State = 60; importNamespace();
				State = 61; Match(TERM);
				}
				}
				State = 67;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 69;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 68; namespaceDec();
				}
				}
				State = 71;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==NAMESPACE_KW );
			State = 73; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDecContext : ParserRuleContext {
		public ITerminalNode NAMESPACE_KW() { return GetToken(HOPLGrammarParser.NAMESPACE_KW, 0); }
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public ITerminalNode CURLY_OPEN() { return GetToken(HOPLGrammarParser.CURLY_OPEN, 0); }
		public NamespaceBodyContext namespaceBody() {
			return GetRuleContext<NamespaceBodyContext>(0);
		}
		public ITerminalNode CURLY_CLOSE() { return GetToken(HOPLGrammarParser.CURLY_CLOSE, 0); }
		public NamespaceDecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterNamespaceDec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitNamespaceDec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDecContext namespaceDec() {
		NamespaceDecContext _localctx = new NamespaceDecContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_namespaceDec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(NAMESPACE_KW);
			State = 76; @namespace();
			State = 77; Match(CURLY_OPEN);
			State = 78; namespaceBody();
			State = 79; Match(CURLY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceBodyContext : ParserRuleContext {
		public NamespacePartContext[] namespacePart() {
			return GetRuleContexts<NamespacePartContext>();
		}
		public NamespacePartContext namespacePart(int i) {
			return GetRuleContext<NamespacePartContext>(i);
		}
		public NamespaceBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterNamespaceBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitNamespaceBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceBodyContext namespaceBody() {
		NamespaceBodyContext _localctx = new NamespaceBodyContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_namespaceBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REQUIRED_KW) | (1L << CONSTANT_KW) | (1L << TRIGGER_KW) | (1L << HANDLER_KW) | (1L << LIST_KW) | (1L << TUPLE_KW) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) {
				{
				{
				State = 81; namespacePart();
				}
				}
				State = 86;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespacePartContext : ParserRuleContext {
		public NamespacePartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespacePart; } }
	 
		public NamespacePartContext() { }
		public virtual void CopyFrom(NamespacePartContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class HandlerDecNamespaceContext : NamespacePartContext {
		public HandlerDecContext handlerDec() {
			return GetRuleContext<HandlerDecContext>(0);
		}
		public HandlerDecNamespaceContext(NamespacePartContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterHandlerDecNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitHandlerDecNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHandlerDecNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GlobalDecNamespaceContext : NamespacePartContext {
		public GlobalDecContext globalDec() {
			return GetRuleContext<GlobalDecContext>(0);
		}
		public ITerminalNode TERM() { return GetToken(HOPLGrammarParser.TERM, 0); }
		public GlobalDecNamespaceContext(NamespacePartContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterGlobalDecNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitGlobalDecNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalDecNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionDecNamespaceContext : NamespacePartContext {
		public FunctionDecContext functionDec() {
			return GetRuleContext<FunctionDecContext>(0);
		}
		public FunctionDecNamespaceContext(NamespacePartContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterFunctionDecNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitFunctionDecNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDecNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespacePartContext namespacePart() {
		NamespacePartContext _localctx = new NamespacePartContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_namespacePart);
		try {
			State = 92;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new FunctionDecNamespaceContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; functionDec();
				}
				break;

			case 2:
				_localctx = new GlobalDecNamespaceContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 88; globalDec();
				State = 89; Match(TERM);
				}
				break;

			case 3:
				_localctx = new HandlerDecNamespaceContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 91; handlerDec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(HOPLGrammarParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(HOPLGrammarParser.ID, i);
		}
		public ITerminalNode[] DOT() { return GetTokens(HOPLGrammarParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(HOPLGrammarParser.DOT, i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_namespace);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(ID);
			State = 99;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 95; Match(DOT);
					State = 96; Match(ID);
					}
					} 
				}
				State = 101;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportNamespaceContext : ParserRuleContext {
		public ITerminalNode IMPORT_KW() { return GetToken(HOPLGrammarParser.IMPORT_KW, 0); }
		public NamespaceContext[] @namespace() {
			return GetRuleContexts<NamespaceContext>();
		}
		public NamespaceContext @namespace(int i) {
			return GetRuleContext<NamespaceContext>(i);
		}
		public ITerminalNode ALIAS_KW() { return GetToken(HOPLGrammarParser.ALIAS_KW, 0); }
		public ImportNamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importNamespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterImportNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitImportNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportNamespaceContext importNamespace() {
		ImportNamespaceContext _localctx = new ImportNamespaceContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_importNamespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(IMPORT_KW);
			State = 103; @namespace();
			State = 106;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ALIAS_KW) {
				{
				State = 104; Match(ALIAS_KW);
				State = 105; @namespace();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(HOPLGrammarParser.ID, 0); }
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(HOPLGrammarParser.DOT, 0); }
		public ITerminalNode[] BOX_OPEN() { return GetTokens(HOPLGrammarParser.BOX_OPEN); }
		public ITerminalNode BOX_OPEN(int i) {
			return GetToken(HOPLGrammarParser.BOX_OPEN, i);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] BOX_CLOSE() { return GetTokens(HOPLGrammarParser.BOX_CLOSE); }
		public ITerminalNode BOX_CLOSE(int i) {
			return GetToken(HOPLGrammarParser.BOX_CLOSE, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHOPLGrammarListener typedListener = listener as IHOPLGrammarListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHOPLGrammarVisitor<TResult> typedVisitor = visitor as IHOPLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_identifier);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 108; @namespace();
				State = 109; Match(DOT);
				}
				break;
			}
			State = 113; Match(ID);
			State = 120;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 114; Match(BOX_OPEN);
					State = 115; expr(0);
					State = 116; Match(BOX_CLOSE);
					}
					} 
				}
				State = 122;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
